tests/invalid/DefiniteAssign_Invalid_4.whiley
method f(any this) :
    debug a

method g() :
    f(x)
